--- a/apps/ForumComposite/Views/Shared/Layout/Styles.cshtml
+++ b/apps/ForumComposite/Views/Shared/Layout/Styles.cshtml
@@ -4,3 +4,4 @@
 <link rel="stylesheet" href="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/styles/bootstrap.css")">
 <link rel="stylesheet" href="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/styles/jqcloud.css")">
 <link rel="stylesheet" href="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/styles/custom.css")">
+<link rel="stylesheet" href="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/styles/tagit.css")">
