--- a/apps/AdminComposite/Views/Tag/List.cshtml
+++ b/apps/AdminComposite/Views/Tag/List.cshtml
@@ -84,6 +84,7 @@
 			<tr>
 				<th>Active</th>
 				<th>Name</th>
+				<th>Posts</th>
 				<th></th>
 			</tr>
 		</thead>
@@ -113,6 +114,7 @@
 					<tr>
 						<td>@Html.CheckBoxFor(m => tag.Active, new {@class = "tag-active", data_item_id = tag.Identifier, data_item_name=tag.Name})</td>
 						<td><span data-category-id="@tag.Identifier">@tag.Name</span></td>
+						<td>@tag.TotalPosts</td>
 						<td>
 							<ul class="actions">
 								<li><a href="#" class="edit" data-tag-id="@tag.Identifier" rel="tooltip" original-title="Edit Tag">edit tag</a></li>
