--- a/apps/ForumComposite/Content/themes/default/styles/tagit.css
+++ b/apps/ForumComposite/Content/themes/default/styles/tagit.css
@@ -16,27 +16,27 @@
 }
 
 .ui-autocomplete .ui-menu-item {
-    padding: 0;
-    margin: 0;
+    padding: 0 !important;
+    margin: 0 !important;
 }
 
 .ui-autocomplete  .ui-menu-item a {
-    display: block;
-    padding: 4px 6px;
-    margin: 0;
-    text-decoration: none;
-    line-height: 12px;
-    border-bottom: 1px solid #E5E5E5;
-    border-top: 1px solid #fff;
-    color: #78959D;
+    display: block !important;
+    padding: 4px 6px !important;
+    margin: 0 !important;
+    text-decoration: none !important;
+    line-height: 12px !important;
+    border-bottom: 1px solid #E5E5E5 !important;
+    border-top: 1px solid #fff !important;
+    color: #78959D !important;
     
 }
 
 .ui-autocomplete .ui-menu-item a.ui-state-hover,
 .ui-autocomplete .ui-menu-item a.ui-state-active {
-    background-color: #c0d1e2;
-    color: #555;
-    border-color: #a6cef7;
+    background-color: #c0d1e2 !important;
+    color: #555 !important;
+    border-color: #a6cef7 !important;
 }
 
 .ui-autocomplete-loading {
@@ -44,75 +44,75 @@
 }
 
 ul.tagit {
-    cursor: text;
-    overflow: auto;
-    font-size: 14px;
-    width: 97%;
-    padding: 3px;
-    margin-top: 2px;
-    margin-right: 6px;
-    margin-bottom: 16px;
-    border: 1px solid #E5E5E5;
-    background: #fff;
-    color: #555;
+    cursor: text !important;
+    overflow: auto !important;
+    font-size: 14px !important;
+    width: 97% !important;
+    padding: 3px !important;
+    margin-top: 2px !important;
+    margin-right: 6px !important;
+    margin-bottom: 16px !important;
+    border: 1px solid #E5E5E5 !important;
+    background: #fff !important;
+    color: #555 !important;
 }
 
 ul.tagit li {
-    -moz-border-radius: 5px;
-    border-radius: 5px;
-    display: block;
-    float: left;
-    margin: 2px 5px 2px 0;
-    position: relative;
+    -moz-border-radius: 5px !important;
+    border-radius: 5px !important;
+    display: block !important;
+    float: left !important;
+    margin: 2px 5px 2px 0 !important;
+    position: relative !important;
 }
 
 ul.tagit li.tagit-choice {
-    background-color: #DEE7F8;
-    border: 1px solid #CAD8F3;
-    padding: 2px 13px 3px 4px;
+    background-color: #DEE7F8 !important;
+    border: 1px solid #CAD8F3 !important;
+    padding: 2px 13px 3px 4px !important;
 }
 
 ul.tagit li.tagit-choice.selected {
-    background-color: #f5b0b0;
-    border-color: #f76464;
+    background-color: #f5b0b0 !important;
+    border-color: #f76464 !important;
 }
 
 ul.tagit li.tagit-choice:hover {
-    background-color: #bbcef1;
-    border-color: #6d95e0;
+    background-color: #bbcef1 !important;
+    border-color: #6d95e0 !important;
 }
 
 ul.tagit li.tagit-new {
-    padding: 2px 4px 3px;
-    padding: 2px 4px 1px;
-    padding: 2px 4px 1px 0;
+    padding: 2px 4px 3px !important;
+    padding: 2px 4px 1px !important;
+    padding: 2px 4px 1px 0 !important;
 }
 
 ul.tagit li.tagit-choice input {
-    display: block;
-    float: left;
-    margin: 0 5px 0 0;
-    padding-top: 2px;
-    padding-bottom: 2px;
+    display: block !important;
+    float: left !important;
+    margin: 0 5px 0 0 !important;
+    padding-top: 2px !important;
+    padding-bottom: 2px !important;
 }
 
 ul.tagit li.tagit-choice a.tagit-close {
-    color: #777777;
-    cursor: pointer;
-    font-size: 12px;
-    font-weight: bold;
-    outline: medium none;
-    padding: 2px 0 2px 3px;
-    text-decoration: none;
-    position: absolute;
-    display: block;
-    top: 0;
-    right: 3px;
-    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7);
+    color: #777777 !important;
+    cursor: pointer !important;
+    font-size: 12px !important;
+    font-weight: bold !important;
+    outline: medium none !important;
+    padding: 2px 0 2px 3px !important;
+    text-decoration: none !important;
+    position: absolute !important;
+    display: block !important;
+    top: 0 !important;
+    right: 3px !important;
+    text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.7) !important;
 }
 
 ul.tagit li.tagit-choice a.tagit-close:hover {
-    color: #535353;
+    color: #535353 !important;
 }
 
 ul.tagit input[type="text"] {
@@ -121,9 +121,9 @@ ul.tagit input[type="text"] {
     margin: 0 !important;
     padding: 0 !important;
     width: inherit !important;
-    outline: none;
+    outline: none !important;
 }
 
 .tagit-hiddenSelect {
-    display:none;
+    display:none !important;
 }
