wire jsoncompositeinspector into admin composite

--- a/apps/AdminComposite/Views/Theme/List.cshtml
+++ b/apps/AdminComposite/Views/Theme/List.cshtml
@@ -41,7 +41,8 @@
 	{
 		@Html.HiddenFor(m => m.ForumIdentifier);
 		@Html.HiddenFor(m => m.SelectedTheme, new { id = "selected-theme" });
-									   
+		@Html.HiddenFor(m => m.ForumName, new { id = "forum-name" });
+
 		<fieldset>
 			<legend>Themes</legend>
 			<dl>
