fixed crazy bug in azure message channel where it deleted the queue whenever you closed the channel; removed comment sorting from post details

--- a/apps/ForumComposite/Views/Post/Detail.cshtml
+++ b/apps/ForumComposite/Views/Post/Detail.cshtml
@@ -120,13 +120,13 @@
 				<h2>Comments</h2><a name="comments"></a>
 			</div>
 
-			<div class="span6">
+@*			<div class="span6">
 				<ul class="pills" style="float: right;">
 					<li class="active"><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Best</a></li>
 					<li><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Oldest</a></li>
 					<li><a href="@Url.RouteUrl("Post", new { categorySlug = "my-category", postSlug = "post-title" })">Newest</a></li>
 				</ul>
-			</div>
+			</div>*@
 
 		</div>
 
