--- a/apps/AdminComposite/Views/ProfanityFilter/List.cshtml
+++ b/apps/AdminComposite/Views/ProfanityFilter/List.cshtml
@@ -43,11 +43,11 @@
 
 				try
 				{
-					inputModel.ContentIdentifier = contentId;
+					inputModel.StopWordIdentifier = contentId;
 					inputModel.Active = active;
 					EUCLID.publish(inputModel);
 				} catch(e) {
-					EUCLID.displayError("Unable to activate content item '" + currentName + "'", e.name + "<br />" + e.message);
+					EUCLID.displayError("Unable to activate stop word '" + currentName + "'", e.name + "<br />" + e.message);
 				}
 				$.get("@Url.Action("ActivateStopWord")", { contentId: contentId, active: active });
 			});
@@ -57,26 +57,6 @@
 		});
 	});
 
-	function deleteContent(contentId) {
-		var inputModel;
-		try 
-		{
-			inputModel = EUCLID.getModel({ commandName: "DeleteForumContent" });
-		} catch(e) {
-			EUCLID.displayError("Unable to get model for command DeleteForumContent", e.name +  "<br />" + e.message);
-			return false;
-		}
-
-		try{
-			inputModel.ContentIdentifier = contentId;
-			EUCLID.publish(inputModel);
-		} catch(e) {
-			EUCLID.displayError("Unable to delete content", e.name + "<br />" + e.message);
-			return false;
-		}
-		
-		window.location.reload();
-	}
 </script>
 
 <article>
@@ -95,7 +75,6 @@
 				<th>Active</th>
 				<th>Word to Match</th>
 				<th>Replacement Word</th>
-				<th>&nbsp;</th>
 			</tr>
 		</thead>
 		@if (Model.TotalStopWords == 0)
@@ -125,11 +104,6 @@
 						<td>@Html.CheckBoxFor(m => content.Active, new {@class = "content-active", data_item_id = @content.Identifier, data_item_name=string.Format("{0} - {1}", @content.Identifier, @content.WordToMatch) })</td>
 						<td>@content.WordToMatch</td>
 						<td>@content.ReplacementWord</td>
-						<td>
-							<ul class="actions">
-								<li><a class="admin-delete confirmation-dialog" href="#" rel="tooltip" original-title="Delete" data-confirmation-message="Do you want to delete this content?" data-confirm-function="deleteContent" data-item-id="@content.Identifier">Delete</a></li>
-							</ul>
-						</td>
 					</tr>
 				}
 			</tbody>
