--- a/apps/ForumComposite/Views/Tag/Detail.cshtml
+++ b/apps/ForumComposite/Views/Tag/Detail.cshtml
@@ -1,81 +1,74 @@
 ﻿@model ForumComposite.ViewModels.Tag.TagDetailViewModel
 @{
-	ViewBag.Title = ForumInfo.ForumName + " - {Tag Name}";
+	ViewBag.Title = ForumInfo.ForumName + " - " + Model.Name;
 	Layout = "~/Views/Shared/_ForumLayout.cshtml";
 	ViewBag.TagsClass = "active";
 }
 <ul class="breadcrumb">
 	<li><a href="@Url.RouteUrl("Home")">@ForumInfo.ForumName Home</a> <span class="divider">/</span></li>
 	<li><a href="@Url.RouteUrl("Tags")">Tags</a> <span class="divider">/</span></li>
-	<li class="active">{Tag Name}</li>
+	<li class="active">@Model.Name</li>
 </ul>
-<h1>{Tag Name}</h1>
+<h1>@Model.Name</h1>
 
 @Html.Partial("Layout/CustomContent", "individualtag-header")
 
 <hr />
-<p><small>(Custom tag content.)</small></p>
+@{
+	var postCount = 0;
+	var totalPosts = Model.Listing.Posts.Count;
 
-<div class="row">
+	var postsToPad = 0;
+	var needsPadding = false;
+	
+	if(totalPosts % 4 != 0)
+	{
+		needsPadding = true;
+		postsToPad = 4 - (totalPosts % 4);
+	}
+}
 
-	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
+@foreach(var post in Model.Listing.Posts){
 
-	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
+	if (postCount % 4 == 0)
+		{
+			@:<div class="row">
+		}
 
-</div>
+			<div class="span4">
+				@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = post })
+			</div>
 
-<hr>
+		if(needsPadding && postCount == (totalPosts - 1))
+		{
+			for(var i = 0; i<postsToPad; i++)
+			{
+				<div class="span4"></div>
+			}
+			@:</div><hr/>
+		}
 
-<div class="row">
+		if (postCount % 4 == 3)
+		{
+			@:</div><hr/>
+		}
 
-	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
+	{
+		postCount++;
+	}
+}
 
-	<div class="span8">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Large", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-</div>
-
-<hr>
-
-<div class="row">
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-	<div class="span4">
-		@RenderPage("~/Views/Shared/PostTile.cshtml", new { Size = "Small", Post = new ForumAgent.ReadModels.Post() { Title = "{Post Title}", Body = "Etiam porta sem malesuada magna mollis euismod. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed quis ante in ipsum pharetra tempus a vel mi. Cum sociis." } })
-	</div>
-
-</div>
-
-<hr />
+@{
+	var pages = Model.Listing.TotalPosts % 16;
+}
 
 <div class="pagination">
 	<ul>
 		<li class="prev disabled"><a href="#">&larr; Previous</a></li>
-		<li><a href="#">1</a></li>
-		<li class="active"><a href="#">2</a></li>
-		<li><a href="#">3</a></li>
-		<li class="disabled"><a href="#">...</a></li>
-		<li><a href="#">45</a></li>
-		<li><a href="#">46</a></li>
-		<li><a href="#">47</a></li>
+		@for (var i = 1; i < pages + 1; i++ )
+	{
+		<li @if(i == Model.CurrentPage){<text>class="active"</text>}><a href="?page=@i">@i</a></li>
+	}
 		<li class="next"><a href="#">Next &rarr;</a></li>
 	</ul>
 </div>
