added all users screen

--- a/apps/ForumComposite/Views/Profile/All.cshtml
+++ b/apps/ForumComposite/Views/Profile/All.cshtml
@@ -10,21 +10,26 @@
 <h1>All Users</h1>
 <table class="zebra-striped">
 	<tbody>
-		@for (var i = 1; i < 11; i++)
+		@{
+			var userCount = 1;
+		}
+		@foreach(var user in Model.UserListing.Users)
 		{
 			<tr>
 				<td>
-					@i
+					@userCount
 				</td>
-				<td><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">
+				<td><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = user.Username })">
 							<img src="https://secure.gravatar.com/avatar/4ff80c3ba10af1c3a5d86f293003cc99?s=40" /></a>
 				</td>
 				<td>
-					<h3><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = "my-profile-slug" })">{Username}</a></h3>
+					<h3><a href="@Url.RouteUrl("ProfileOverview", new { profileSlug = user.Username })">@user.Username</a></h3>
 				</td>
-				<td>35 posts, 45 comments, 5 favorites </td>
-				<td style="text-align: right;"><a href="#">Add as Friend</a> </td>
+				<td>@user.PostCount posts, @user.CommentCount comments, @user.NumberVotes votes </td>
 			</tr>
+			{
+				userCount++;
+			}
 		}
 	</tbody>
 </table>
