--- a/apps/AdminComposite/Views/ProfanityFilter/List.cshtml
+++ b/apps/AdminComposite/Views/ProfanityFilter/List.cshtml
@@ -36,7 +36,7 @@
 				return false;
 			}
 
-			$(".content-active").each(function(index, item) {
+			$(".stopWord-active").each(function(index, item) {
 				var contentId = $(item).attr("data-item-id");
 				var active = $(item).is(":checked");
 				var currentName = $(item).attr("data-item-name");
@@ -56,6 +56,27 @@
 			return false;
 		});
 	});
+	
+	function deleteStopWord(stopWordId) {
+		var inputModel;
+		try 
+		{
+			inputModel = EUCLID.getModel({ commandName: "DeleteStopWord" });
+		} catch(e) {
+			EUCLID.displayError("Unable to get model for command DeleteStopWord", e.name +  "<br />" + e.message);
+			return false;
+		}
+
+		try{
+			inputModel.StopWordIdentifier = stopWordId;
+			EUCLID.publish(inputModel);
+		} catch(e) {
+			EUCLID.displayError("Unable to delete stop word", e.name + "<br />" + e.message);
+			return false;
+		}
+		
+		window.location.reload();
+	}
 
 </script>
 
@@ -75,6 +96,7 @@
 				<th>Active</th>
 				<th>Word to Match</th>
 				<th>Replacement Word</th>
+				<th>&nbsp;</th>
 			</tr>
 		</thead>
 		@if (Model.TotalStopWords == 0)
@@ -98,12 +120,17 @@
 				</tr>
 			</tfoot>
 			<tbody>
-				@foreach (var content in Model.StopWords)
+				@foreach (var stopWord in Model.StopWords)
 				{
 					<tr>
-						<td>@Html.CheckBoxFor(m => content.Active, new {@class = "content-active", data_item_id = @content.Identifier, data_item_name=string.Format("{0} - {1}", @content.Identifier, @content.WordToMatch) })</td>
-						<td>@content.WordToMatch</td>
-						<td>@content.ReplacementWord</td>
+						<td>@Html.CheckBoxFor(m => stopWord.Active, new {@class = "stopWord-active", data_item_id = stopWord.Identifier, data_item_name=string.Format("{0} - {1}", stopWord.Identifier, stopWord.WordToMatch) })</td>
+						<td>@stopWord.WordToMatch</td>
+						<td>@stopWord.ReplacementWord</td>
+						<td>
+							<ul class="actions">
+								<li><a class="admin-delete confirmation-dialog" href="#" rel="tooltip" original-title="Delete" data-confirmation-message="Do you want to delete this stop word?" data-confirm-function="deleteStopWord" data-item-id="@stopWord.Identifier">Delete</a></li>
+							</ul>
+						</td>
 					</tr>
 				}
 			</tbody>
