added point display and wired voting controls on post detail

--- a/apps/ForumComposite/Views/Post/Detail.cshtml
+++ b/apps/ForumComposite/Views/Post/Detail.cshtml
@@ -71,6 +71,43 @@
 			<div class="span12">
 				<p>@Model.Post.InitialPost.Body<a name="addcomment"></a></p>
 			</div>
+			<div class="span2">
+				@using (Html.BeginFormForInputModel(new VoteOnPostInputModel()))
+				{
+					@Html.Hidden("ForumIdentifier", ForumInfo.ForumIdentifier)
+					@Html.Hidden("AuthorIdentifier", ForumInfo.AuthenticatedUserIdentifier)
+	 				@Html.Hidden("PostIdentifier", Model.Post.InitialPost.Identifier)
+	 				@Html.Hidden("VoteUp", true)
+					<input style="display: inline; height: 16px; width: 16px; border: 0px;" type="image" src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/images/arrow-090.png")" />
+					<text>&nbsp;&nbsp;&nbsp;</text>
+				}
+				(@Model.Post.InitialPost.Score)
+				@using (Html.BeginFormForInputModel(new VoteOnPostInputModel()))
+				{
+					@Html.Hidden("ForumIdentifier", ForumInfo.ForumIdentifier)
+					@Html.Hidden("AuthorIdentifier", ForumInfo.AuthenticatedUserIdentifier)
+	 				@Html.Hidden("PostIdentifier", Model.Post.InitialPost.Identifier)
+	 				@Html.Hidden("VoteUp", false)
+					<input style="display: inline; height: 16px; width: 16px; border: 0px;" type="image" src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/images/arrow-270.png")" />
+					<text>&nbsp;&nbsp;&nbsp;</text>
+				}
+				<a href="#"><img title="Report abusive content" src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/images/exclamation-white.png")" /></a>&nbsp;&nbsp;&nbsp;
+				@using (Html.BeginFormForInputModel(new MarkPostAsFavoriteInputModel()))
+				{
+					@Html.Hidden("ForumIdentifier", ForumInfo.ForumIdentifier)
+					@Html.Hidden("UserIdentifier", ForumInfo.AuthenticatedUserIdentifier)
+					@Html.Hidden("PostIdentifier", Model.Post.Identifier)
+					if (Model.IsFavoritePost)
+					{
+						<input style="display: inline; height: 16px; width: 16px; border: 0px;" type="image" border="0" height="16" width="16" title="Mark as favorite" src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/images/star.png")"/>
+					}
+					else
+					{
+						<input style="display: inline; height: 16px; width: 16px; border: 0px;" type="image" border="0" height="16" width="16" title="Mark as favorite" src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/images/star-empty.png")"/>
+					}
+				}
+
+			</div>
 			
 		</div>
 		
@@ -88,26 +125,7 @@
 			</div>
 
 			<div class="span6" style="text-align: right;">
-				<a href="#">
-					<img title="Vote up" src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/images/arrow-090.png")" /></a>&nbsp;&nbsp;&nbsp;
-				<a href="#">
-					<img title="Vote down" src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/images/arrow-270.png")" /></a>&nbsp;&nbsp;&nbsp;
-				<a href="#">
-					<img title="Report abusive content" src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/images/exclamation-white.png")" /></a>&nbsp;&nbsp;&nbsp;
-				@using (Html.BeginFormForInputModel(new MarkPostAsFavoriteInputModel()))
-				{
-					@Html.Hidden("ForumIdentifier", ForumInfo.ForumIdentifier)
-					@Html.Hidden("UserIdentifier", ForumInfo.AuthenticatedUserIdentifier)
-					@Html.Hidden("PostIdentifier", Model.Post.Identifier)
-					if (Model.IsFavoritePost)
-					{
-						<input style="display: inline; height: 16px; width: 16px; border: 0px;" type="image" border="0" height="16" width="16" title="Mark as favorite" src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/images/star.png")"/>
-					}
-					else
-					{
-						<input style="display: inline; height: 16px; width: 16px; border: 0px;" type="image" border="0" height="16" width="16" title="Mark as favorite" src="@Url.Content("~/Content/themes/" + ForumInfo.ForumTheme + "/images/star-empty.png")"/>
-					}
-				}
+
 			</div>
 
 		</div>
