--- a/apps/AdminComposite/Views/Authentication/_AnonymousLayout.cshtml
+++ b/apps/AdminComposite/Views/Authentication/_AnonymousLayout.cshtml
@@ -50,7 +50,7 @@
 		<script src="@Url.Content("~/Content/jquery.url-encode.js")" type="text/javascript"> </script>
 		<script src="@Url.Content("~/Content/jeditable/jquery.jeditable.js")" type="text/javascript"> </script>
 		<script src="@Url.Content("~/Content//viewport/jquery.viewport.js")" type="text/javascript"> </script>
-	</head>
+		<script type="text/javascript" src="/composite/js/euclid-0.9.js" ></script>	</head>
 
 	<body @{ if (IsSectionDefined("bodyClass"))
 					 {
