start adding support for executing query by name & associative array

--- a/src/sdk/JsonCompositeInspector/Views/Queries/view-query-methods.cshtml
+++ b/src/sdk/JsonCompositeInspector/Views/Queries/view-query-methods.cshtml
@@ -61,7 +61,7 @@
 					});
 				}
 				else {
-					html = formatProperties(item);
+					html = formatProperties(model);
 				}
 
 				$("#results").html(html);
