intellisense for nancy razor viewengine

--- a/src/sdk/JsonCompositeInspector/Views/Commands/view-publication-record.cshtml
+++ b/src/sdk/JsonCompositeInspector/Views/Commands/view-publication-record.cshtml
@@ -1,3 +1,4 @@
+@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase
 @using JsonCompositeInspector.Models;
 @using Euclid.Framework;
 @using Euclid.Common.Messaging;
