--- a/src/sdk/JsonCompositeInspector/Views/Composite/home.cshtml
+++ b/src/sdk/JsonCompositeInspector/Views/Composite/home.cshtml
@@ -1,4 +1,5 @@
-﻿@using JsonCompositeInspector.Models;
+﻿@inherits Nancy.ViewEngines.Razor.NancyRazorViewBase
+@using JsonCompositeInspector.Models;
 
 @{
 	Layout = "Shared/_Layout.cshtml";
