add euclid js to admin layout, fixed create.cshtml

--- a/apps/AdminComposite/Views/Authentication/Create.cshtml
+++ b/apps/AdminComposite/Views/Authentication/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@using AdminComposite.Models
+﻿@using AdminComposite.Areas.Forum.InputModels
 @using Euclid.Composites.Mvc.Extensions
 @model AdminComposite.Areas.Forum.InputModels.CreateOrganizationAndRegisterUserInputModel
 		   
