--- a/apps/AdminComposite/Views/Shared/_Layout.cshtml
+++ b/apps/AdminComposite/Views/Shared/_Layout.cshtml
@@ -47,6 +47,7 @@
 		<script src="@Url.Content("~/Content/viewport/jquery.viewport.js")" type="text/javascript"> </script>
 		<script src="@Url.Content("~/Content/jquery.validate.js")" type="text/javascript"></script>
 		<script src="@Url.Content("~/Content/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
+		<script type="text/javascript" src="/composite/js/euclid-0.9.js" ></script>
 	</head>
 	<body>
 		<div>
