--- a/apps/AdminComposite/Views/Shared/_pagination.cshtml
+++ b/apps/AdminComposite/Views/Shared/_pagination.cshtml
@@ -12,40 +12,45 @@
 	var closeTr = (paginationModel.WriteTr) ? "</tr>" : string.Empty;
 }
 
+@if (paginationModel.TotalPages > 1)
+{ 
+
+
 @Html.Raw(openTable)
 	@Html.Raw(openTFoot)
 		@Html.Raw(openTr)
-			<td @if(paginationModel.ColSpan > 0) { <text>colspan="@paginationModel.ColSpan"</text>}>
+			<td @if (paginationModel.ColSpan > 0)
+	   { <text>colspan="@paginationModel.ColSpan"</text>}>
 				<ul class="pagination">
-					<li><a href="@Url.Action(paginationModel.ActionName, paginationModel.ControllerName, new RouteValueDictionary{ {paginationModel.IdentifierParameterName, paginationModel.Identifier} })" class="button gray"><< first</a></li>
-					<li><a href="@Url.Action(paginationModel.ActionName, paginationModel.ControllerName, new RouteValueDictionary { { "offset", paginationModel.PreviousPageOffset}, { "pageSize", paginationModel.PageSize }, { paginationModel.IdentifierParameterName, paginationModel.Identifier } })" class="button gray">< prev</a></li>
+					<li><a href="@Url.Action(paginationModel.ActionName, paginationModel.ControllerName, new RouteValueDictionary { { paginationModel.IdentifierParameterName, paginationModel.Identifier } })" class="button gray"><< first</a></li>
+					<li><a href="@Url.Action(paginationModel.ActionName, paginationModel.ControllerName, new RouteValueDictionary { { "offset", paginationModel.PreviousPageOffset }, { "pageSize", paginationModel.PageSize }, { paginationModel.IdentifierParameterName, paginationModel.Identifier } })" class="button gray">< prev</a></li>
 
 					@if (paginationModel.ShowLeadingEllipsis)
-					{
+	 {
 						<li class="hellip">...</li>
-					}
+	 }
 
-					@for (var i = - 2; i < 0; i++)
-					{
-						var offset = paginationModel.GetOffsetForPage(i);
+					@for (var i = -2; i < 0; i++)
+	 {
+		 var offset = paginationModel.GetOffsetForPage(i);
 
-						if (offset >= 0)
-						{
+		 if (offset >= 0)
+		 {
 							<li><a href="@Url.Action(paginationModel.ActionName, paginationModel.ControllerName, new RouteValueDictionary { { "offset", offset }, { "pageSize", paginationModel.PageSize }, { paginationModel.IdentifierParameterName, paginationModel.Identifier } })" class="button gray">@(paginationModel.CurrentPage + i)</a></li>
-						}
-					}
+		 }
+	 }
 
 					<li><a href="@Url.Action(paginationModel.ActionName, paginationModel.ControllerName, new RouteValueDictionary { { "offset", paginationModel.Offset }, { "pageSize", paginationModel.PageSize }, { paginationModel.IdentifierParameterName, paginationModel.Identifier } })" class="button">@paginationModel.CurrentPage</a></li>
 
 					@for (var i = 1; i < 3; i++)
-					{
-						var offset = paginationModel.GetOffsetForPage(i);
-						
-						if (offset >= 0)
-						{
+	 {
+		 var offset = paginationModel.GetOffsetForPage(i);
+
+		 if (offset >= 0)
+		 {
 							<li><a href="@Url.Action(paginationModel.ActionName, paginationModel.ControllerName, new RouteValueDictionary { { "offset", offset }, { "pageSize", paginationModel.PageSize }, { paginationModel.IdentifierParameterName, paginationModel.Identifier } })" class="button gray">@(paginationModel.CurrentPage + i)</a></li>
-						}
-					}
+		 }
+	 }
 
 					@if (paginationModel.ShowTrailingEllipsis)
 	 {
@@ -59,3 +64,4 @@
 		@Html.Raw(closeTr)
 	@Html.Raw(closeTFoot)
 @Html.Raw(closeTable)
+}
